fix overflow

--- a/css/404.css
+++ b/css/404.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
   font-size: 15vw;
-  margin: -2vw;
+  margin: -2vw 0;
 }
 
 p {
